// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Disabled variants should render disabled button component contained 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={true}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FEEEEF",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
            },
          ]
        }
        testID="button-label"
        textColor="highEmphasis"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Disabled variants should render disabled button component outlined 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={true}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderColor": "#FAFAEA",
          "borderRadius": 42,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="outlined"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
            },
          ]
        }
        testID="button-label"
        textColor="mediumEmphasis"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Disabled variants should render disabled button component text 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={true}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="text"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
            },
          ]
        }
        testID="button-label"
        textColor="mediumEmphasis"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component contained 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
            },
          ]
        }
        testID="button-label"
        textColor="onPrimary"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component outlined 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 42,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="outlined"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
            },
          ]
        }
        testID="button-label"
        textColor="highEmphasis"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component text 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {},
      ]
    }
    testID="button"
    type="text"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
            },
          ]
        }
        testID="button-label"
        textColor="highEmphasis"
      >
        BUTTON LABEL
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component with Icon should render the icon to the left 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="left"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <Text
        iconName="outlined-default-mockup"
        iconPosition="left"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginStart": 8,
            },
          ]
        }
        testID="button-label"
        textColor="onPrimary"
      >
        BUTTON LABEL
      </Text>
      <Text
        accessibilityRole="imagebutton"
        color="onPrimary"
        name="outlined-default-mockup"
        size="small"
      >
        outlined-default-mockup
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component with Icon should render the icon to the right by default 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="touchable-ripple"
>
  <View
    accessibilityRole="button"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 40,
          "paddingHorizontal": 8,
        },
        Object {
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconName="outlined-default-mockup"
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.23,
              "lineHeight": 19,
              "marginEnd": 8,
            },
          ]
        }
        testID="button-label"
        textColor="onPrimary"
      >
        BUTTON LABEL
      </Text>
      <Text
        accessibilityRole="imagebutton"
        color="onPrimary"
        name="outlined-default-mockup"
        size="small"
      >
        outlined-default-mockup
      </Text>
    </View>
  </View>
</View>
`;
